syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service3";
option java_outer_classname = "Service3Impl";

service Service3 {

// Server Streaming RPC Searching books online by TOPIC
  rpc searchBook(SearchBookRequest) returns (stream SearchBookResponse) {}
  
  // Client streaming RPC for Reserve books online .
  rpc ReserveBook(stream ReserveBookRequest) returns ( ReserveBookResponse) {}

}

// For searching books
message SearchBookRequest {
  string topic = 1;
}

message SearchBookResponse {
  string title = 1;
  string author = 2;
  string description = 3;
  int32 year = 4;
  bool searchFinished = 5; // I needed to add a variable when the server finishes of sending results of the search
}

// For Reserve a book
message ReserveBookRequest {
  string bookId = 1;
  string userId = 2;
}

message ReserveBookResponse {
  string confirmationNumber = 1;
  string status = 2;
}

